# stark-fibonacci

./: ARCHITECTURE.md  LICENSE  PROJECT.md  README.md  num-zama-clement-walter-1.md  prompt.md  pyproject.toml
src/stark_fibonacci/: air.py  cli.py  codeprincipale.py  domain.py  field.py  fri.py  main.py  merkle.py  polynomial.py  proof.py  stark.py  trace.py  transcript.py  utils.py
tests/: test_air.py  test_cli.py  test_domain.py  test_field.py  test_fri.py  test_merkle.py  test_polynomial.py  test_stark.py  test_trace.py  test_transcript.py
