[project]
name = "stark-fibonacci"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "GoulvenBonmarchand", email = "goulven.bonmarchand@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.5.0",
]

[project.scripts]
stark-fibonacci = "stark_fibonacci.main:main"

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
