[project]
name = "stark-fibonacci"
version = "1.0.0"
description = "STARK prover and verifier for the Fibonacci recurrence, in from-scratch Python."
readme = "README.md"
authors = [
    { name = "GoulvenBonmarchand", email = "goulven.bonmarchand@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []  

[project.scripts]
stark-fibonacci = "stark_fibonacci.cli:main"

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "hypothesis>=6.155.7",
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]
